2006-07-11  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* node.c (ftpfs_create_node): Check the result from hurd_ihash_add().
	Add E to the hash table instead of NEW.

2005-06-14  Hugues Larrive  <hugues.larrive@gmail.com>

	* ftpfs.c (parse_startup_opt): User names may contain a @, so take
	the last @ of FTPFS_REMOTE_FS.
	* host.c (split_server_name): User names may contain a @, so take
	the last @ of P.

2003-08-17  Marcus Brinkmann  <marcus@gnu.org>

	* ftpfs.h: Include <hurd/ihash.h>.
	(struct ftpfs): Change type of INODE_MAPPINGS to struct
	hurd_ihash.
	(struct ftpfs_dir_entry): Change type of INODE_LOCP to
	hurd_ihash_locp_t.
	* node.c (ftpfs_create_node): Call hurd_ihash_add, not ihash_add.
	(netfs_node_norefs): Call hurd_ihash_locp_remove, not
	ihash_locp_remove.
	* fs.c: Include <stddef.h>.
	(ftpfs_create): Call hurd_ihash_init, not hurd_ihash_create.
	Call hurd_ihash_destroy on error.

2002-10-18  Moritz Schulte  <moritz@duesseldorf.ccc.de>

        * dir.c (ftpfs_dir_lookup): Initialize NES.entry.

2002-05-13  Roland McGrath  <roland@frob.com>

	* dir.c (ftpfs_refresh_node): Set NODE->nn_translated appropriately.

2002-05-13  Marcus Brinkmann  <marcus@gnu.org>

	* ftpfs.c (netfs_server_name, netfs_server_version): New
	variables.

2002-05-08  Roland McGrath  <roland@frob.com>

	* conn.c (ftpfs_get_ftp_conn): Cast to uintptr_t before void *.
	* ftpfs.c (cntl_debug): Vice versa.

2002-04-13  Moritz Schulte  <moritz@chaosdorf.de>

	* ftpfs.c: Include <sys/stat.h>
	(main): Stat the underlying node and initialize the root node's
	stat information.

	* dir.c (ftpfs_refresh_node): If refreshing the root node, simply
	use the old stat information.

2002-03-11  Roland McGrath  <roland@frob.com>

	* ftpfs.c (parse_startup_opt): If given one argument with no :,
	use "/" as the remote root.

2001-12-29  Roland McGrath  <roland@frob.com>

	* netfs.c (netfs_attempt_statfs): Implement this,
	returning all zeros except for f_type and f_fsid.
